src/objects/SomDig_BetreuerTeam__c.object
<CustomObject>
    <description>Gibt die Informatiormationen bezüglich Team und Vermarkter zu der einzelnen Mediakampagne im NBT</description>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_BetreuerVermarkter__c</fullName>
        <description>In welchem Auftrag wird die Mediakampagne angelegt und betreut?</description>
        <inlineHelpText>In welchem Auftrag wird die Mediakampagne angelegt und betreut?</inlineHelpText>
        <label>Betreuer Vermarkter</label>
        <picklist>
            <picklistValues>
                <fullName>71M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdAudience</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomDig_TeamUngueltig__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Soll das Team in neuen Kampagnen noch auswählbar sein oder nicht? Steuert den Nachschlagefilter in der Mediakampagne des Feldes &quot;Betreuer Team&quot;</description>
        <inlineHelpText>Soll das Team in neuen Kampagnen noch auswählbar sein oder nicht? Steuert den Nachschlagefilter in der Mediakampagne des Feldes &quot;Betreuer Team&quot;</inlineHelpText>
        <label>Team ungültig</label>
        <type>Checkbox</type>
    </fields>
    <label>Betreuer Team</label>
    <listViews>
        <fullName>SomDig_AlleBetreuerTeams</fullName>
        <columns>SomDig_TeamUngueltig__c</columns>
        <columns>NAME</columns>
        <columns>SomDig_BetreuerVermarkter__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle Betreuer Teams</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Betreuer Team</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Betreuer Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>